# detectArmor

./: CMakeLists.txt  README.md  main.cpp
include/: detect.h
src/: Armor.cpp  findArmor.cpp  findLightBar.cpp  imageDispose.cpp  matchingArmor.cpp  matchingLightBar.cpp
